# codoc

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml  vscode-ext.yml
codoc/: __init__.py  __main__.py  cli.py  errors.py  executor.py  generator.py  nobook.py  parser.py  script_reader.py  utils.py  watch.py
codoc/nb_edit/: __init__.py  __main__.py  batch.py  cli.py  editor.py
tests/: __init__.py  create_fixtures.py  test_batch.py  test_cli.py  test_cli_commands.py  test_editor.py  test_executor.py  test_generator.py  test_notebook.py  test_parser.py  test_script_reader.py  test_utils.py  test_watch.py
tests/fixtures/: jupyter-format.md  jupyter-format.template.md  mixed-template.template.md  multi-notebook.template.md  script-template.template.md  simple.template.md
tests/fixtures/nobooks/: simple.out.py
tests/fixtures/notebook-with-local-module/: local_module.py  test.ipynb
tests/fixtures/notebooks/: blank-lines.ipynb  error-test.ipynb  indented-code.ipynb  jupyter-format.ipynb  multiline-output.ipynb  sample.ipynb  (+2 more)
tests/notebook/: __init__.py  conftest.py  test_add.py  test_create.py  test_delete.py  test_execute.py  test_get.py  test_insert.py  test_list.py  test_other.py  test_update.py
vscode-ext/: .vscodeignore  README.md  editing.md  package-lock.json  package.json  tsconfig.json  tsconfig.webview.json  webpack.config.js
vscode-ext/src/: editorProvider.ts  extension.ts  generate.ts  navigate.ts  nobook.ts  notebook.ts  params.ts  parser.ts  script.ts  types.ts  writeBack.ts
vscode-ext/webview/: editor.ts  style.css
(+12 files in other folders)
